working on center alignment issue with Filters

--- a/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
+++ b/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
@@ -92,7 +92,7 @@
 }
 .time--period {
   .filterchips {
-    width: 850px;
+    width: 845px;
     float: left;
     .horizontal-align {
       display: inline-block;
